[tool.poetry]
name = "tvm-cn"
version = "0.1.0"
description = "TVM Documentation in Chinese Simplified"
authors = ["Hyper.AI <hi@hyper.ai>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
